otro update  xd

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -33,7 +33,7 @@ calcula tu imcxd
         
         
         <span class="resulta" >{{ result }} </span>
-        <div *ngIf="result < 16 && result >0 "> 
+        <div *ngIf="result < 16 && result >0 "> usted tiene delgadez severa, es recomendable ver un medico
             <p> 
             </p>
             <table style="width: 300%">
@@ -129,7 +129,7 @@ calcula tu imcxd
                 
             </table>
         </div>
-        <div *ngIf="result < 18.49 && result >17.0"> delgadez leve no ai pez
+        <div *ngIf="result < 18.49 && result >17.0"> delgadez leve no tiene mucho problema 
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
@@ -176,7 +176,7 @@ calcula tu imcxd
                 
             </table>
         </div>
-        <div *ngIf="result < 25 && result >18.5"> normal xd
+        <div *ngIf="result < 25 && result >18.5"> usted tiene un peso normal 
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
@@ -223,7 +223,7 @@ calcula tu imcxd
                 
             </table>
         </div>
-        <div *ngIf="result < 30 && result >25.0"> sobrepeso
+        <div *ngIf="result < 30 && result >25.0"> usted cuenta con sobrepeso tome medidadas
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
@@ -270,7 +270,7 @@ calcula tu imcxd
                 
             </table>
         </div>
-        <div *ngIf="result < 35 && result >30.0"> obesidad tipo 1
+        <div *ngIf="result < 35 && result >30.0"> usted tiene obesidad tipo 1 es recomendable ir al medico 
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
@@ -317,7 +317,7 @@ calcula tu imcxd
                 
             </table>
         </div>
-        <div *ngIf="result < 40 && result >35"> obesidad 2
+        <div *ngIf="result < 40 && result >35">  usted tiene obesidad 2 porfavor vaya a un medico 
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
@@ -365,7 +365,7 @@ calcula tu imcxd
             </table>
         </div>
 
-        <div *ngIf="result >40.0"> obesidad morbida
+        <div *ngIf="result >40.0">usted tiene obesidad morbida urgente ir a un medico
             <table style="width: 300%">
                 <tr>
                     <th>estado del cuerpo</th>
